add data set and add some chart

--- a/unemployment_analysis.ipynb
+++ b/unemployment_analysis.ipynb
@@ -11,6 +11,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "78964834",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter the data for the year 2021\n",
+    "df_2021 = df_total_population[['Country Name', '2021']]\n",
+    "\n",
+    "# Sort the data by the total population in descending order\n",
+    "df_2021_sorted = df_2021.sort_values(by='2021', ascending=False)\n",
+    "\n",
+    "# Set the figure size\n",
+    "plt.figure(figsize=(14, 6))\n",
+    "\n",
+    "# Create the bar chart\n",
+    "plt.bar(df_2021_sorted['Country Name'], df_2021_sorted['2021'])\n",
+    "\n",
+    "# Add text annotations for the population values\n",
+    "for i, value in enumerate(df_2021_sorted['2021']):\n",
+    "    plt.text(i, value, f'{value:,}', ha='center', va='bottom')\n",
+    "\n",
+    "# Customize the chart\n",
+    "plt.xlabel('Country')\n",
+    "plt.ylabel('Population Count')\n",
+    "plt.title('Total Population Count by Country (2021)')\n",
+    "plt.xticks(rotation=90)\n",
+    "\n",
+    "# Display the chart\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6ca20349",
    "metadata": {},
    "outputs": [
