--- a/economic_indicators.ipynb
+++ b/economic_indicators.ipynb
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5d6a57a",
+   "id": "9512c393",
    "metadata": {},
    "source": [
     "# What is the percentage of the population of each ASEAN country in the total population of ASEAN in 2021?"
@@ -1440,14 +1440,7 @@
    "id": "50b85503",
    "metadata": {},
    "source": [
-    "# How does the unemployment rate vary across different regions or countries?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c8c8f94a",
-   "metadata": {},
-   "source": [
+    "# How does the unemployment rate vary across different regions or countries?\n",
     "#Highlight variations in unemployment rates across countries and years"
    ]
   },
@@ -2325,15 +2318,8 @@
    "id": "d38e6014",
    "metadata": {},
    "source": [
-    "#  Analyzing the Association of ASEAN Member Countries and GDP Growth using Simple Linear Regression"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d913d8cc",
-   "metadata": {},
-   "source": [
-    "#estimate its performance and determine if it effectively captures the relationship between the years and GDP growth."
+    "#  Analyzing the Association of ASEAN Member Countries and GDP Growth using Simple Linear Regression\n",
+    "#estimate its performance and determine if it effectively captures the relationship between the years and GDP growth.\n"
    ]
   },
   {
@@ -4672,7 +4658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23cecf3b",
+   "id": "41518cba",
    "metadata": {},
    "source": [
     "# Multiple Regression\n",
@@ -4682,7 +4668,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "87b16f83",
+   "id": "c438cebe",
    "metadata": {},
    "outputs": [
     {
@@ -4765,7 +4751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd5333e7",
+   "id": "b900bf59",
    "metadata": {},
    "source": [
     "# Conclusion"
