--- a/economic_indicators.ipynb
+++ b/economic_indicators.ipynb
@@ -817,10 +817,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "13e3170c",
+   "metadata": {},
+   "source": [
+    "#Demographic Profile of ASEAN Countries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "07bbbf78",
    "metadata": {},
    "source": [
-    "#Demographic Profile of ASEAN Countries\n",
     "\n",
     "# Which ASEAN country has the largest population in the given year?"
    ]
@@ -1440,7 +1447,16 @@
    "id": "50b85503",
    "metadata": {},
    "source": [
-    "# How does the unemployment rate vary across different regions or countries?\n",
+    "# How does the unemployment rate vary across different regions or countries?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfa270d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Highlight variations in unemployment rates across countries and years"
    ]
   },
@@ -2318,8 +2334,15 @@
    "id": "d38e6014",
    "metadata": {},
    "source": [
-    "#  Analyzing the Association of ASEAN Member Countries and GDP Growth using Simple Linear Regression\n",
-    "#estimate its performance and determine if it effectively captures the relationship between the years and GDP growth.\n"
+    "#  Analyzing the Association of ASEAN Member Countries and GDP Growth using Simple Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ce52b63",
+   "metadata": {},
+   "source": [
+    "#to estimate its performance and determine if it effectively captures the relationship between the years and GDP growth.\n"
    ]
   },
   {
@@ -4662,6 +4685,7 @@
    "metadata": {},
    "source": [
     "# Multiple Regression\n",
+    "\n",
     "#Can the year variable be used to predict changes in unemployment rate, GDP growth rate, or inflation rate? Is there a significant relationship between year and each of these variables in the regression model?"
    ]
   },
@@ -4758,12 +4782,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f4ae3ce",
+   "cell_type": "markdown",
+   "id": "14106bfa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#Improvements ideas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cac249c",
+   "metadata": {},
+   "source": [
+    "#Expansion ideas"
+   ]
   }
  ],
  "metadata": {
